@@ -110,6 +110,9 @@ Enhancements from 1.2
   - This can be used as a calback in FileCleaner
   - Together these allow FileCleaner to do a forceDelete to kill directories
 
+- FileCleaner.exitWhenFinished [IO-99]
+  - A new method that allows the internal cleaner thread to be cleanly terminated
+
 - WildcardFileFilter
   - Replacement for WildcardFilter
   - Accepts both files and directories
